--- a/frontend/src/app/pages/faq/faq.component.html
+++ b/frontend/src/app/pages/faq/faq.component.html
@@ -8,16 +8,26 @@
 
   <ul class="nav-links">
     <li><a routerLink="/home">Home</a></li>
-    <li><a href="/eventpage" routerLink="/eventpage">Eventos</a></li>
-    <li><a href="/faq" class="nav-active">FAQ</a></li>
-    <li><a href="/sobre" routerLink="/sobre">Sobre</a></li>
+    <li><a routerLink="/eventpage">Eventos</a></li>
+    <li><a routerLink="/faq" routerLinkActive="nav-active">FAQ</a></li>
+    <li><a routerLink="/sobre">Sobre</a></li>
   </ul>
 
   <div class="auth-buttons">
-    <button class="signup" (click)="verCadastro()">Cadastro</button>
-    <button class="login" (click)="verLogin()">Login</button>
+    <!-- Se NÃO estiver logado -->
+    <ng-container *ngIf="!checkIfLoggedIn(); else logado">
+      <button class="signup" (click)="goToCadastro()">Cadastro</button>
+      <button class="login" (click)="goToLogin()">Login</button>
+    </ng-container>
+
+    <!-- Se estiver logado -->
+    <ng-template #logado>
+      <button class="signup" (click)="seeProfile()">Perfil</button>
+      <button class="login" (click)="logout()">Logout</button>
+    </ng-template>
   </div>
 </header>
+<!-- FIM DO HEADER -->
 
 <!-- FUNDO COM IMAGEM -->
 <section class="faq-title">
