--- a/frontend/src/app/pages/sobre/sobre.component.html
+++ b/frontend/src/app/pages/sobre/sobre.component.html
@@ -7,17 +7,25 @@
   </div>
 
   <ul class="nav-links">
-    <li><a href="/home" routerLink="/home">Home</a></li>
-    <li><a href="/eventpage" routerLink="/eventpage">Eventos</a></li>
-    <li><a href="/faq" routerLink="/faq">FAQ</a></li>
-    <li><a href="/sobre" class="nav-active">Sobre</a></li>
+    <li><a routerLink="/home">Home</a></li>
+    <li><a routerLink="/eventpage">Eventos</a></li>
+    <li><a routerLink="/faq">FAQ</a></li>
+    <li><a routerLink="/sobre" class="nav-active">Sobre</a></li>
   </ul>
 
   <div class="auth-buttons">
-    <button class="signup" (click)="verCadastro()">Cadastro</button>
-    <button class="login" (click)="verLogin()">Login</button>
+    <ng-container *ngIf="!checkIfLoggedIn(); else logado">
+      <button class="signup" (click)="goToCadastro()">Cadastro</button>
+      <button class="login" (click)="goToLogin()">Login</button>
+    </ng-container>
+
+    <ng-template #logado>
+      <button class="signup" (click)="seeProfile()">Perfil</button>
+      <button class="login" (click)="logout()">Logout</button>
+    </ng-template>
   </div>
 </header>
+
 
 <main class="containerColor">
   <section class="sobre-title">
@@ -25,24 +33,18 @@
   </section>
 
   <div class="sobre-container">
-    <span
-      >O CulturaApp é um aplicativo que conecta você aos melhores eventos
+    <span>O CulturaApp é um aplicativo que conecta você aos melhores eventos
       culturais da sua cidade, como peças de teatro e shows. Acreditamos que a
       cultura transforma vidas e torna as cidades mais vibrantes e
-      acolhedoras.</span
-    >
+      acolhedoras.</span>
 
-    <span
-      >Nossa missão é facilitar o acesso a experiências culturais de qualidade,
+    <span>Nossa missão é facilitar o acesso a experiências culturais de qualidade,
       oferecendo informações claras e atualizadas sobre eventos presenciais e
       virtuais. Valorizamos a diversidade e buscamos inspirar as pessoas a
-      explorarem novas formas de arte, lazer e conhecimento.</span
-    >
+      explorarem novas formas de arte, lazer e conhecimento.</span>
 
-    <span
-      >Queremos fazer parte de uma cidade mais criativa, inclusiva e cheia de
-      vida!</span
-    >
+    <span>Queremos fazer parte de uma cidade mais criativa, inclusiva e cheia de
+      vida!</span>
 
     <span class="final">CulturaApp Portal e Comunicação LTDA.</span>
   </div>
@@ -70,70 +72,41 @@
           <div class="membro">
             <p>
               <span>Cris A.</span>
-              <a href="#"
-                ><img src="../../../assets/img/github-icon.png" alt="GitHub"
-              /></a>
-              <a href="#"
-                ><img
-                  src="../../../assets/img/linkedin-icon.png"
-                  alt="LinkedIn"
-              /></a>
+              <a href="#"><img src="../../../assets/img/github-icon.png" alt="GitHub" /></a>
+              <a href="#"><img src="../../../assets/img/linkedin-icon.png" alt="LinkedIn" /></a>
             </p>
           </div>
 
           <div class="membro">
             <p>
               <span>Igor T.</span>
-              <a href="#"
-                ><img src="../../../assets/img/github-icon.png" alt="GitHub"
-              /></a>
-              <a href="#"
-                ><img
-                  src="../../../assets/img/linkedin-icon.png"
-                  alt="LinkedIn"
-              /></a>
+              <a href="#"><img src="../../../assets/img/github-icon.png" alt="GitHub" /></a>
+              <a href="#"><img src="../../../assets/img/linkedin-icon.png" alt="LinkedIn" /></a>
             </p>
           </div>
 
           <div class="membro">
             <p>
               <span>Jaque</span>
-              <a href="https://github.com/JaquePaula"
-                ><img src="../../../assets/img/github-icon.png" alt="GitHub"
-              /></a>
-              <a href="https://www.linkedin.com/in/jaquelinepaula/"
-                ><img
-                  src="../../../assets/img/linkedin-icon.png"
-                  alt="LinkedIn"
-              /></a>
+              <a href="https://github.com/JaquePaula"><img src="../../../assets/img/github-icon.png" alt="GitHub" /></a>
+              <a href="https://www.linkedin.com/in/jaquelinepaula/"><img src="../../../assets/img/linkedin-icon.png"
+                  alt="LinkedIn" /></a>
             </p>
           </div>
 
           <div class="membro">
             <p>
               <span>Maria</span>
-              <a href="#"
-                ><img src="../../../assets/img/github-icon.png" alt="GitHub"
-              /></a>
-              <a href="#"
-                ><img
-                  src="../../../assets/img/linkedin-icon.png"
-                  alt="LinkedIn"
-              /></a>
+              <a href="#"><img src="../../../assets/img/github-icon.png" alt="GitHub" /></a>
+              <a href="#"><img src="../../../assets/img/linkedin-icon.png" alt="LinkedIn" /></a>
             </p>
           </div>
 
           <div class="membro">
             <p>
               <span>Victor</span>
-              <a href="#"
-                ><img src="../../../assets/img/github-icon.png" alt="GitHub"
-              /></a>
-              <a href="#"
-                ><img
-                  src="../../../assets/img/linkedin-icon.png"
-                  alt="LinkedIn"
-              /></a>
+              <a href="#"><img src="../../../assets/img/github-icon.png" alt="GitHub" /></a>
+              <a href="#"><img src="../../../assets/img/linkedin-icon.png" alt="LinkedIn" /></a>
             </p>
           </div>
         </div>
