--- a/frontend/src/app/pages/perfil-empresa/perfil-empresa.component.html
+++ b/frontend/src/app/pages/perfil-empresa/perfil-empresa.component.html
@@ -85,7 +85,7 @@
         <div class="form-row">
           <div class="form-group half">
             <label>Número</label>
-            <input formControlName="number" type="text" placeholder="Número" />
+            <input formControlName="addressNumber" type="text" placeholder="Número" />
           </div>
           <div class="form-group half">
             <label>Complemento</label>
@@ -146,7 +146,7 @@
         <div class="form-row">
           <div class="form-group half">
             <label>Número</label>
-            <input formControlName="number" type="text" placeholder="Número" />
+            <input formControlName="addressNumber" type="text" placeholder="Número" />
           </div>
           <div class="form-group half">
             <label>Complemento</label>
