--- a/frontend/src/app/pages/perfil-empresa/perfil-empresa.component.html
+++ b/frontend/src/app/pages/perfil-empresa/perfil-empresa.component.html
@@ -16,7 +16,7 @@
   </div>
 
   <div class="right">
-    <button class="profile-btn">Perfil</button>
+    <button class="profile-btn" (click)="logout()">Logout</button>
   </div>
 </header>
 
