--- a/frontend/src/app/pages/perfil-usuario/perfil-usuario.component.html
+++ b/frontend/src/app/pages/perfil-usuario/perfil-usuario.component.html
@@ -16,7 +16,7 @@
   </div>
 
   <div class="right">
-    <button class="profile-btn">Perfil</button>
+    <button class="profile-btn" (click)="logout()">Logout</button>
   </div>
 </header>
 
@@ -89,7 +89,7 @@
         <div class="form-row">
           <div class="form-group half">
             <label>Número</label>
-            <input formControlName="number" type="text" placeholder="Número" />
+            <input formControlName="addressNumber" type="text" placeholder="Número" />
           </div>
           <div class="form-group half">
             <label>Complemento</label>
@@ -138,7 +138,7 @@
         <div class="form-group">
           <label>Telefone</label>
           <div class="telefone-container">
-            <input type="text" formControlName="areaCode" placeholder="areaCode" class="ddd-input" />
+            <input type="text" formControlName="areaCode" placeholder="DDD" class="ddd-input" />
             <input type="text" formControlName="phoneNumber" placeholder="Telefone" class="telefone-input" />
           </div>
         </div>
@@ -159,7 +159,7 @@
         <div class="form-row">
           <div class="form-group half">
             <label>Número</label>
-            <input formControlName="number" type="text" placeholder="Número" />
+            <input formControlName="addressNumber" type="text" placeholder="Número" />
           </div>
           <div class="form-group half">
             <label>Complemento</label>
